Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19766

Issue pane should display unresolved symbol linker errors

XMLWordPrintable

    • b2b57a51238105164bc11c25a4ffb633028acd2d

      It's fairly common to have undefined symbol errors. It's annoyed me forever that compilers just list the object files where the symbols are used and not where the symbol is first used (they totally could do that) but anyway we can't fix that here.

      In the Issues pane of Qt Creator, if you get an undefined symbol error it just says something like:

      > symbol(s) not found for architecture x86_64
      > linker command failed with exit code 1 (use -v to see invocation)

      And you have to go to the Compile Output pane to see which actual symbols are undefined.

      Qt Creator should parse those errors in the same way it parses other compile errors.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            timmmm Tim
            Votes:
            2 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes