Toolchains: Add output parser for Apple ld

Fixes: QTCREATORBUG-19766
Change-Id: Ieccabf99deffa9f9b464ef7ad7c1eb3e796457cf
Reviewed-by: Christian Stenger <christian.stenger@qt.io>